    algorithm compared due date and today's date always. But for completed
    todos it results in false positives. New detection algorithm for overdue:
    - a todo is active and its due date is earlier than today's date
    - a todo is done and it has finish date set, and the finish date goes
      after todo's due date
    In all other cases a todo is not considered an overdue one.

 -- Vladimir Markelov <vmatroskin@gmail.com>  Mon, 26 Dec 2022 20:35:43 -0800

ttdl (3.4.6) unstable; urgency=medium

  * Clippy fixes

 -- Vladimir Markelov <vmatroskin@gmail.com>  Sun, 18 Dec 2022 14:58:18 -0800

ttdl (3.4.5) unstable; urgency=medium

  * Fixed: `postpone` did not change due date. Only `--dry-run` worked as
    expected
  * Upgrade dependencies

 -- Vladimir Markelov <vmatroskin@gmail.com>  Fri, 14 Oct 2022 21:09:18 -0700

ttdl (3.4.3) unstable; urgency=medium

  * On completing a recurrent todo copied creation date from an original todo.
    Now the creation date of the new todo is set to today's date
  * Command-line option '--all' now shows todos with a threshold date set in
    the future

 -- Vladimir Markelov <vmatroskin@gmail.com>  Tue, 30 Aug 2022 15:38:35 -0700

ttdl (3.4.2) unstable; urgency=medium

  * Fix the remaining error output on "Broken Pipe" (issue #59)

 -- Vladimir Markelov <vmatroskin@gmail.com>  Sat, 27 Aug 2022 17:05:00 -0700

ttdl (3.4.1) unstable; urgency=medium

  * Fix panic when using TTDL with head, grep and alike tools (issue #59)

 -- Vladimir Markelov <vmatroskin@gmail.com>  Wed, 10 Aug 2022 21:58:02 -0700

ttdl (3.4.0) unstable; urgency=medium

  * Fix `set-rec` command: it modified todo's recurrent date only if the todo
    was marked as a done one

 -- Vladimir Markelov <vmatroskin@gmail.com>  Sun, 24 Jul 2022 11:13:25 -0700

ttdl (3.3.0) unstable; urgency=medium

  * New task view mode `--calendar=<range>` where `range` is a single value
    which denotes how long the calendar is. The value uses the same syntax as